assets/css/style.css
/*  import fonts from google fonts
    use: font-family: 'Assistant', sans-serif; for body text
    use: font-family: 'Quicksand', sans-serif;
     */

@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400&family=Quicksand:wght@300;400;500;600;700&display=swap");

/* colour palettes
     White Smoke:       #F5F5F5
     Medium Slate Blue  #735CEB
     Tropical Indigo:   #9D8DF1
     Payne's Gray:      #536B79
     Night:             #121213
  */
body {
  background-color: #f5f5f5;
  position: relative;
}

p {
  font-family: "Assistant", sans-serif;
}

h2 {
  font-family: "Quicksand", sans-serif;
  font-size: 42pt;
  font-weight: bolder;
  text-align: center;
  color: #735ceb;
}

h3 {
  font-family: "Quicksand", sans-serif;
  font-size: 28pt;
  font-weight: bolder;
  text-align: center;
  color: #735ceb;
}

a {
  font-family: "Quicksand", sans-serif;
  font-weight: bold;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  text-decoration-thickness: 5px;
}

/* header contact details  */

#contact-header {
  color: #f5f5f5;
  font-family: "Assistant", sans-serif;
  padding-top: 10px;
  background-color: #735ceb;
}

.contact-header p {
  font-size: 12pt;
  color: #f5f5f5;
}

#contact-header b {
  font-family: "Quicksand", sans-serif;
  color: #f5f5f5;
}

/* header logo */

#header {
  background-color: #f5f5f5;
}

.header-bottom {
  background-color: #f5f5f5;
}

.jenamin {
  font-family: "Quicksand", sans-serif;
  font-weight: bolder;
  font-size: 42pt;
  color: #735ceb;
}

.tagline {
  font-family: "Quicksand", sans-serif;
  font-size: 18pt;
  line-height: 0;
  color: #121213;
  padding: 0;
}

.logo {
  min-width: fit-content;
  max-width: fit-content;
  padding-bottom: 0;
  margin-bottom: 0;
  text-decoration: none;
}

.navbar-brand:hover {
  text-decoration: none;
}

/* header links menu */

.nav {
  background-color: #f5f5f5;
}

.menu {
  background-color: #f5f5f5;
  position: relative;
}

.links {
  text-decoration: none;
  text-align: center;
  font-size: 24px;
  font-weight: bold;
  line-height: 0;
}

.links li {
  padding: 0px 15px 0px 15px;
}

.links a {
  color: #735ceb;
}

.links a:hover {
  color: #9d8df1;
  text-decoration: underline;
  text-decoration-thickness: 7px;
  text-decoration-color: #9d8df1;
}

.navbar {
  background-color: #f5f5f5;
  padding-bottom: 0;
  margin-bottom: 8px;
}

.nav-item .active:hover {
  text-decoration: none;
}

.collapsed-menu {
  line-height: 10pt;
}

breadcrumb {
  margin-bottom: 10px;
}

.breadcrumbs {
  background-color: #f5f5f5;
}

.breadcrumb a {
  background-color: #f5f5f5;
  color: #735ceb;
  font-weight: bold;
  text-decoration: none;
}

.breadcrumb a:hover {
  text-decoration: underline;
}

/* index.html  */

.main-section {
  color: #121213;
  position: absolute;
  background-color: #f5f5f5;
}

.hero-image {
  height: 65vh;
  background-color: #f5f5f5;
  animation: forwards;
  background: url(../images/hero-image.webp) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.reasons-container {
  padding-bottom: 20px;
  padding-top: 20px;
  padding-left: 50px;
  padding-right: 50px;
  font-size: 16pt;
}

.divider-purple {
  align-self: center;
  max-width: 5px;
  height: 100px;
  background-color: #735ceb;
  padding: 0px;
  margin: 20px;
}

.horizontal-divider {
  min-height: 5px;
  max-height: 5px;
  width: 100px;
  background-color: #735ceb;
  margin-bottom: 20px;
}

/* About Us */

.about-main-section {
  height: fit-content;
  font-size: 18pt;
  padding: 20px;
  margin: 10px;
}

.about-header {
  color: #735ceb;
}

.about-main-section h3 {
  color: #735ceb;
  padding: 10px;
}

.about-body {
  text-align: left;
}

.about-box {
  background-color: rgba(245, 245, 245, 0.8);
  max-width: 75%;
  min-width: 300px;
  height: auto;
  padding: 10px;
  margin-bottom: 20px;
}

.about-box p {
  padding-bottom: 10px;
  margin: 10px;
}

#about-people img {
  width: 33%;
  min-width: 250px;
  float: left;
}

.about-dogs-images img {
  max-width: 100%;
  max-height: 350px;
  margin: 10px;
}

/* privacy.html */

.privacy-main-section {
  height: fit-content;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
  background-image: url(/assets/images/hero-image.webp);
  padding: 20px;
  margin: 10px;
}

.privacy-policy {
  max-width: 75%;
  min-width: 300px;
  height: auto;
  font-size: 14pt;
  font-family: "Assistant", sans-serif;
  background-color: rgba(245, 245, 245, 0.8);
  padding: 30px;
}

.privacy-policy h3 {
  padding-top: 20pt;
}

#ico {
  color: #735ceb;
}

#ico:hover {
  color: #9d8df1;
  text-decoration-color: #9d8df1;
}

/* contact-us */

.contact-main-section {
  height: fit-content;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
  background-image: url(/assets/images/hero-image.webp);
  padding: 20px;
  margin: 10px;
}

.form {
  max-width: 500px;
  background-color: rgba(157, 141, 241, 0.8);
  padding: 15px;
  text-align: center;
  border: none;
  font-family: "Quicksand", sans-serif;
}

.form-control {
  outline-color: #f5f5f5;
}

.btn-dark {
  border: none;
}

/* footer positioning */

footer {
  width: 100%;
  position: relative;
  bottom: 0;
  left: 0;
}

.footer-container {
  color: #f5f5f5;
  background-color: #735ceb;
}

.socials i {
  font-size: larger;
  color: #f5f5f5;
}

.socials li {
  list-style: none;
}

/* footer styling  */

.footer-upper {
  color: #f5f5f5;
  text-align: center;
}

.map {
  padding: 10px 10px 10px 10px;
}

.footer-divider {
  align-self: center;
  max-width: 5px;
  height: 150px;
  background-color: #f5f5f5;
  padding: 0;
  margin: 0;
}

.essential-info {
  padding-top: 10px;
  align-self: center;
  text-align: center;
  font-size: larger;
  margin-right: 0;
  font-family: "Assistant", sans-serif;
}

.essential-info i {
  color: #f5f5f5;
}

.essential-info h4 {
  font-family: "Quicksand", sans-serif;
  font-weight: bold;
}

/* footer lower */

.footer-lower {
  padding-top: 10px;
  text-align: center;
  color: #f5f5f5;
  background-color: #536b79;
  height: fit-content;
}

.copyright {
  font-family: "Quicksand", sans-serif;
  text-align: center;
}

.footer-lower a {
  font-family: "Quicksand", sans-serif;
  font-weight: bold;
  text-decoration: none;
  color: #f5f5f5;
}

.footer-lower a:hover {
  font-weight: bolder;
  color: #121213;
  text-decoration: underline;
  text-decoration-thickness: 5px;
}

.footer-lower i:hover {
  font-weight: bolder;
  color: #121213;
}

@media (min-width: 990px) {
  .menu {
    position: relative;
  }

  .links {
    position: absolute;
    padding-right: 10px;
    right: 0;
    bottom: 0;
  }
}

